# markdown-macros

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  zensical.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  pages.yml  publish-pypi.yml
docs/: compatibility.md  configuration.md  demo.md  demo_macros.py  demo_vars.yaml  index.md  installation.md  license.md  troubleshooting.md  usage.md  writing-modules.md
markdown_macros/: __init__.py  front_matter.py  macros.py  utils.py  zensical_injection.py
tests/: __init__.py  pluglet_helper.py  test_front_matter.py  test_macros.py  test_utils.py  test_zensical_injection.py
